err/smstools.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/smstools'...
Compiling './lib/python3.5/site-packages/smstools/android.py'...
***   File "./lib/python3.5/site-packages/smstools/android.py", line 31
    print "Creating empty Android SQLITE db"
                                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/smstools/core.py'...
***   File "./lib/python3.5/site-packages/smstools/core.py", line 61
    print term.red_on_black("unrecognized database details and structure:")
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/smstools/googlevoice_to_sqlite.py'...
***   File "./lib/python3.5/site-packages/smstools/googlevoice_to_sqlite.py", line 381
    print "\nproblem parsing " + str(fl)
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/smstools/ios6.py'...
***   File "./lib/python3.5/site-packages/smstools/ios6.py", line 57
    print "Creating empty iOS 6 SQLITE db"
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/smstools/tabular.py'...
***   File "./lib/python3.5/site-packages/smstools/tabular.py", line 27
    print "CSV file missing needed columns. has: "+ str(firstrow)
                                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/smstools/tests'...
Compiling './lib/python3.5/site-packages/smstools/tests/core_tests.py'...
***   File "./lib/python3.5/site-packages/smstools/tests/core_tests.py", line 36
    print "(%d) from <%s> %s" % (len(new_texts), parser.__class__, os.path.basename(filename))
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/smstools/tests/ios6_tests.py'...
***   File "./lib/python3.5/site-packages/smstools/tests/ios6_tests.py", line 29
    print "processing file %s" % file
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/smstools/xmlmms.py'...
***   File "./lib/python3.5/site-packages/smstools/xmlmms.py", line 41
    print "generating xml output"
                                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/smstools-0.2.1.egg-info'...
Listing './lib/python3.5/site-packages/unicodecsv'...
Listing './lib/python3.5/site-packages/unicodecsv-0.14.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
